scss/main.scss
@import '_variables';
//@import '_hacks';

body {
	background-color: $default-background-color;

	font-family: Tahoma, sans-serif;

	font-smooth: never;
	-webkit-font-smoothing: never;

	font-size: 12px;
}

fieldset {
	border-style: solid;
	border-color: $default-ui-elements-color;
	border-width: 1px;

	padding: 6px 10px 14px 10px;
}

img {
	image-rendering: pixelated;
}

main > fieldset {
	width: 320px;
}

main > fieldset:only-of-type {
	width: 644px;
}

main {
	margin-bottom: 12px;

	display: flex;
	flex-flow: row nowrap;
	justify-content: center;
}

legend {
	margin: 0 auto;

	color: $default-ui-elements-color;
}

p {
	margin: 2px;
}

#info {
	flex-flow: column nowrap;

	text-align: center;
	line-height: 16px;
	font-size: 11px;
}

#info > div:not(:last-child) {
	margin-bottom: 12px;
}

#info-early-classic {
	display: none;

	color: $color-default-message;
}

#info-unknown-renders {
	display: none;

	color: $color-default-message;
}

#info-unknown-block-ids {
	display: none;

	color: $color-default-message;
}

#info-unknown-item-ids {
	display: none;

	color: $color-default-message;
}

//#info-presumed-item-ids {
//	display: none;
//
//	color: $color-default-message;
//}

#info-unobtainable {
	display: none;

	color: $color-unobtainable;
}

#info-migratable {
	display: none;

	color: $color-migratable;
}

#info-removed {
	display: none;

	color: $color-removed;
}

#legal-info {
	position: fixed;

	bottom: 48px;
	left: 50%;
	transform: translateX(-50%);

	width: 320px;

	border: 2px solid $default-ui-elements-color;
	border-radius: 16px;

	padding-bottom: 8px;

	background-color: rgba(255, 255, 255, 0.5);

	text-align: center;
}

#legal-info > h1 {
	font-size: 1.25em;
}

#legal-info > strong {
	color: darkred;
}

#legal-info > #dismiss-button {
	position: absolute;

	top: 8px;
	right: 12px;

	background: none;

	font-size: 1.3em;
	font-weight: bold;

	cursor: pointer;
	padding: 0 3px;
}

#legal-info > #dismiss-button:hover {
	text-decoration: underline;
}

#settings {
	margin: 0 auto 24px auto;

	width: 320px;
}

#settings > button {
	display: block;
	margin: auto;

	padding: 3px 8px 3px 8px;
}

#settings-inner {
	display: flex;

	margin: 8px 16px 18px 16px;

	flex-flow: column nowrap;
}

#version-info {
	position: fixed;

	bottom: 0;
	right: 0;

	border-top: 1px solid #9c8681;
	border-left: 1px solid #9c8681;
	border-radius: 10px 0 0 0;

	background-color: rgba(223, 192, 185, 0.75);

	padding: 2px 3px 2px 7px;
}

#version-input {
	display: flex;

	margin-bottom: 16px;

	flex-flow: row nowrap;
	align-items: center;
}

#version-selection {
	display: flex;

	margin-left: 16px;

	flex-flow: column nowrap;
}

#version-selection select {
	width: 160px;
}

#version-selection select:not(:last-child) {
	margin-bottom: 2px;
}

.fieldset-content {
	display: flex;

	flex-flow: row wrap;
	align-content: flex-start;

	row-gap: 3px;
	column-gap: 4px;
}

.id {
	text-align: center;
}

.id-unobtainable {
	color: $color-unobtainable;
}

.id-migratable {
	color: $color-migratable;
}

.id-removed {
	color: $color-removed;
}

.img-container {
	width: 32px;
	height: 34px;

	position: relative;
}

.with-tooltip .tooltip {
	visibility: hidden;

	position: fixed;
	top: 0;
	left: 0;

	z-index: 1;

	background-color: rgba(0, 0, 0, 0.755);

	padding: 6px 6px;

	text-align: center;
	line-height: 10px;
	height: 11px;

	font-weight: bold;
	color: white;
	text-shadow: 1px 1px 1px #3f3f3f;
}

.with-tooltip:hover .tooltip {
	visibility: visible;
}

@media (max-width: 479px) {
	main {
		margin-bottom: 18px;

		flex-flow: row wrap;
	}

	main > fieldset:not(:last-child) {
		margin-bottom: 16px;
	}

	p {
		margin: 4px;
	}
}

@media (prefers-contrast: more) {
	body {
		background-color: $high-contrast-background-color;
	}

	fieldset {
		border-color: $high-contrast-ui-elements-color;
	}

	legend {
		color: $high-contrast-ui-elements-color;
	}

	#info-removed {
		color: $color-removed-hc;
	}

	#info-unobtainable {
		color: $color-unobtainable-hc;
	}

	#legal-info {
		border: 2px solid $high-contrast-ui-elements-color;
	}

	.id-removed {
		color: $color-removed-hc;
	}

	.id-unobtainable {
		color: $color-unobtainable-hc;
	}

	body {
		font-weight: bold;
	}
}

